--- a/index.html
+++ b/index.html
@@ -143,6 +143,16 @@
         </div>
       </div>
     </div>
+    <p>
+          <a href="https://github.com/ValentynaVel/weather_app" target="_blank"
+            >Open-source code on GitHub</a
+          >
+          and
+          <a href="https://fancy-granita-028588.netlify.app/" target="_blank">
+            hosted on Netlify</a
+          >
+          by Valentina Velichenko
+        </p>
     <script src="src/script.js"></script>
   </body>
 </html>
