change app name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Weather application</title>
+    <title>Weather app</title>
   </head>
   <body>
     <div class="container">
