--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="col-4">
           <h1>
             <i class="fa-solid fa-sun"></i>
-            25°C
+            25 °C|°F
           </h1>
           <h2 id="city1">Kyiv</h2>
           <h4 id="currentDate">0000</h4>
@@ -143,7 +143,7 @@
         </div>
       </div>
     </div>
-    <p>
+    <small>
           <a href="https://github.com/ValentynaVel/weather_app" target="_blank"
             >Open-source code on GitHub</a
           >
@@ -152,7 +152,7 @@
             hosted on Netlify</a
           >
           by Valentina Velichenko
-        </p>
+          </small>
     <script src="src/script.js"></script>
   </body>
 </html>
