Showing temperature, humidity and wind

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h2 id="city1">Kyiv</h2>
           <ul>
             <li id="currentDate"></li>
-          <li>
+          <li id="condition">
             Clear
           </li>
           </ul>
@@ -49,7 +49,7 @@
          <h2>
           <div class="clearfix weather-temperature">
             <i class="fa-solid fa-sun"></i>
-           <strong>25</strong>
+           <strong id="temperature">25</strong>
            <span class="units">°C|<a href="#">°F</a>
            </span>
           </div>
@@ -75,9 +75,8 @@
             />
             <div class="description">
             <ul>
-                <li>Влажность</li>
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span> m/h</li>
+                <li>Wind: <span id="wind"></span>Km/h</li>
             </ul> 
             </div> 
           </div>
