Add current date and time of update

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           <div class="overview">
           <h2 id="city1">Kyiv</h2>
           <ul>
-            <li id="currentDate"></li>
-          <li id="condition">
-            Clear
-          </li>
+            <li>Now: <span id="currentDate"></span></li> 
+            <li>Last updated: <span id="date"></span></li>
+            <li id="date"></li>
+            <li id="condition"></li>
           </ul>
          </div>
          <h2>
@@ -76,7 +76,7 @@
             <div class="description">
             <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span>Km/h</li>
+                <li>Wind: <span id="wind"></span> Km/h</li>
             </ul> 
             </div> 
           </div>
