--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          </div>
          <h2>
           <div class="clearfix weather-temperature">
-            <i class="fa-solid fa-sun"></i>
+            <img src="" alt="Clear" id="icon" class="float-left"/>
            <strong id="temperature">25</strong>
            <span class="units">°C|<a href="#">°F</a>
            </span>
