--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="clearfix weather-temperature">
             <img src="" alt="Clear" id="icon" class="float-left"/>
            <strong id="temperature">25</strong>
-           <span class="units">°C|<a href="#">°F</a>
+           <span class="units">°C|<a href="#" id="fahrenheit-link">°F</a>
            </span>
           </div>
           </h2>
