--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
          </div>
          <h2>
           <div class="clearfix weather-temperature">
-            <img src="" alt="Clear" id="icon" class="float-left"/>
+           <img src="" alt="Clear" id="icon" class="float-left"/>
            <strong id="temperature">25</strong>
-           <span class="units">°C|<a href="#" id="fahrenheit-link">°F</a>
+           <span class="units">
+            <a href="#" id="celsius-link">°C</a> |<a href="#" id="fahrenheit-link">°F</a>
            </span>
           </div>
           </h2>
