--- a/index.html
+++ b/index.html
@@ -87,18 +87,51 @@
           </div>
         </form>
       </div>
-      <div class="card-group">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">
-              <i class="fa-solid fa-cloud-sun-rain"></i>
-              17°C
-            </h5>
-
-            <p class="card-text">Mon 04</p>
-            <p class="card-text">
-              <small class="text-muted">Jul</small>
-            </p>
+      <div class="weather-forecast">
+        <div class="row">
+          <div class="col-2">
+            <div class="weather-forecast-date">Mon</div>
+            <i class="fa-solid fa-cloud-sun-rain"></i>
+            <div class="weather-forecast-temperature">
+            <span class="weather-forecast-temperature-max">18°C</span>
+            <span class="weather-forecast-temperature-min">17°C</span>
+          </div>
+        </div>
+        
+        <div class="col-2">
+            <div class="weather-forecast-date">Mon
+          </div>
+            <i class="fa-solid fa-cloud-sun-rain"></i>
+            <div class="weather-forecast-temperature">
+            <span class="weather-forecast-temperature-max">18°C</span>
+            <span class="weather-forecast-temperature-min">17°C</span>
+          </div>
+        </div>
+        <div class="col-2">
+            <div class="weather-forecast-date">Mon
+          </div>
+            <i class="fa-solid fa-cloud-sun-rain"></i>
+            <div class="weather-forecast-temperature">
+            <span class="weather-forecast-temperature-max">18°C</span>
+            <span class="weather-forecast-temperature-min">17°C</span>
+          </div>
+        </div>
+        <div class="col-2">
+            <div class="weather-forecast-date">Mon
+          </div>
+            <i class="fa-solid fa-cloud-sun-rain"></i>
+            <div class="weather-forecast-temperature">
+            <span class="weather-forecast-temperature-max">18°C</span>
+            <span class="weather-forecast-temperature-min">17°C</span>
+          </div>
+        </div>
+        <div class="col-2">
+            <div class="weather-forecast-date">Mon
+          </div>
+            <i class="fa-solid fa-cloud-sun-rain"></i>
+            <div class="weather-forecast-temperature">
+            <span class="weather-forecast-temperature-max">18°C</span>
+            <span class="weather-forecast-temperature-min">17°C</span>
           </div>
         </div>
         <div class="card">
@@ -161,7 +194,7 @@
             </p>
           </div>
         </div>
-      </div>
+        </div>
       </div>
         <small>
           <a href="https://github.com/ValentynaVel/weather_app" target="_blank"
