--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="description">
             <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span> Km/h</li>
+                <li>Wind: <span id="wind"></span> m/h</li>
             </ul> 
             </div> 
           </div>
@@ -90,7 +90,7 @@
           <a href="https://fancy-granita-028588.netlify.app/" target="_blank">
             hosted on Netlify</a
           >
-          by Valentina Velichenko
+          by Valentiyna Velichenko
           </small>
 
     </div> 
